--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "date-fns": "^2.0.0-beta.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
