--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@progress/kendo-react-intl": "^3.7.0",
     "@version/react-router-v3": "^1.0.0",
     "date-fns": "^2.0.0-beta.5",
+    "material-table": "^1.54.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.2.0",
     "redux": "^4.0.4"
   },
   "scripts": {
